make sure the nav bar is above the map div (z-index).

--- a/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
@@ -390,7 +390,9 @@ Bold 700
       top: 0px;
       width: auto;
       float: right; 
-      height: 40px;     
+      height: 40px;
+      position: relative;
+      z-index: 100;    
     }
     
     /*Share Your Data button */
